# soulmatch_agent

./: .dockerignore  .env.example  .gitignore  AGENT_IO_SPEC.md  API_TEST_REPORT.md  COMPLETE_IO_SPECIFICATION.md  CONFIG_UPDATE_SUMMARY.md  DEPLOY_HF.md  DEVELOPMENT.md  DIAGNOSIS.md  Dockerfile  FINAL_STATUS.md  FIXES_SUMMARY.md  FIX_PLAN.md  HF_DEPLOYMENT_STEPS.md  IMPLEMENTATION_SUMMARY.md  LLM_CONFIG_2026.md  MIGRATION_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART_V2.md  README.md  README_HF.md  REDESIGN_COMPLETION_REPORT.md  SINGLE_VS_MULTI_AGENT.md  TEST_REPORT.md  THREE_LAYER_MEMORY_IMPLEMENTATION.md  app.py  app_demo.py  app_flask.py  app_gradio.py  deploy_to_hf.sh  mcp_config.json  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements_hf.txt  run_chat_test.sh  test_chat_interactive.py  test_discussion_room.py  (+7 more)
archive/: app.py
docs/: AGENT_IO_SPEC.md  API_TEST_REPORT.md  COMPLETE_IO_SPECIFICATION.md  CORE_LAYER_OPTIMIZATION.md  DATASETS_AND_BENCHMARKS.md  DEPLOYMENT_GUIDE.md  FIXES_SUMMARY.md  FRONTEND_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_V2.md  LLM_CONFIG_2026.md  OPTIMIZATION_SUMMARY.md  QUICK_START_OPTIMIZATION.md  README_HF.md  REPOSITORY_STATUS.md  RESEARCH_CONTRIBUTIONS.md  RESEARCH_ROADMAP.md  SINGLE_VS_MULTI_AGENT.md  THREE_LAYER_MEMORY_IMPLEMENTATION.md
experiments/: EXPERIMENTAL_RESULTS.md  __init__.py  ablation_results.json  ablation_study.py  generate_eval_dataset.py  hallucination_measurement.json  hallucination_measurement.py  metrics.py  run_baselines.py  run_full_experiment.py
src/: config.py  (+2 more)
(+154 files in other folders)
