[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soulmatch"
version = "0.1.0"
description = "Social matching agent system"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.6.0",
    "transformers>=4.40.0",
    "fastapi>=0.110.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"
